Fixing auth issue (for filtering visible boards) + pausing when navigating straight to board

--- a/app/assets/stylesheets/ply.scss
+++ b/app/assets/stylesheets/ply.scss
@@ -49,6 +49,7 @@ body {
 
     height: 100%;
     width: 100%;
+    z-index: 10;
   }
 
   #transition_area {
@@ -60,6 +61,7 @@ body {
 
     height: 100%;
     width: 100%;
+    z-index: 1;
   }
 }
 
